no major changes

--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -99,6 +99,9 @@
       <div class="progress-bar" style="width: 15%">15%</div>
     </div>
   </div>
+ <div class
+=""
+ 
 </div>
 <!-- end of the progress bar-->
 
