--- a/main/user/templates/code/home.html
+++ b/main/user/templates/code/home.html
@@ -1,1 +1,6 @@
-{% extends 'code/base.html' %}{% block content %}{{test}}{% endblock content %}
+{% extends 'code/base.html' %}{% block content %}{{test}}
+{% load static %}
+<script type="text/javascript" src="{% static "script.js" %}"></script>
+
+<button class="btn btn-info" onclick="getNumber()">click me</button>
+{% endblock content %}
