--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -1,8 +1,17 @@
+{% load static %}
+
 <html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>dashboard</title>
+    
+
+
+<script type="text/javascript" src="{% static "script.js" %}">
+</script>
+   
+   
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +19,7 @@
       crossorigin="anonymous"
     />
   </head>
-  <body>
+  <body  class="fw-bold" style='font-family:Roboto;'>
     <!-- main menu html code -->
     <nav
       class="navbar sticky-top navbar-expand-lg bg-body-tertiary"
@@ -92,14 +101,12 @@
 
     <footer>
       <!-- bootstrap scripts -->
-      <script
+      <script 
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"
-      ></script>
+        crossorigin="anonymous"> </script>
       <!-- charts scripts -->
-      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-      <script>
+      {% comment %} <script>
         const ctx = document.getElementById("myChart");
 
         new Chart(ctx, {
@@ -122,7 +129,7 @@
             },
           },
         });
-      </script>
+      </script> {% endcomment %}
     </footer>
   </body>
 </html>
