--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -12,9 +12,7 @@
 
 <!-- the messages alret that pops up after submit a form -->
 
-{% if messager %}
-<h2>this worked</h2>
-{% endif %}
+
 
 <!-- end of the message alert section-->
 
@@ -398,4 +396,5 @@
 <script>
   $('.lead_on_progress_button').on('click',lead_on_progress_ajax)
 </script>
+</div>
 {% endblock content%}
