--- a/main/templates/code/base.html
+++ b/main/templates/code/base.html
@@ -93,7 +93,10 @@
         </div>
       </div>
     </nav>
-
+    <!-- alert message -->
+<div class="m-5 sticky-top">
+<div id="liveAlertPlaceholder"></div>
+</div>
     {% block content %} {% endblock content %}
 
     <footer>
@@ -102,31 +105,10 @@
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"> </script>
-      <!-- charts scripts -->
-      {% comment %} <script>
-        const ctx = document.getElementById("myChart");
+<script src="{% static 'script.js'%}"></script>
 
-        new Chart(ctx, {
-          type: "bar",
-          data: {
-            labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-            datasets: [
-              {
-                label: "# of Votes",
-                data: [12, 19, 3, 5, 2, 3],
-                borderWidth: 1,
-              },
-            ],
-          },
-          options: {
-            scales: {
-              y: {
-                beginAtZero: true,
-              },
-            },
-          },
-        });
-      </script> {% endcomment %}
+      <!-- charts scripts -->
+
     </footer>
   </body>
 </html>
