--- a/main/tasks/templates/code/tasks.html
+++ b/main/tasks/templates/code/tasks.html
@@ -38,7 +38,7 @@
 
   <div class='col'>
     <div class='progress' role='progressbar' aria-label='Basic example' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100'>
-      <div class='progress-bar' style='width: 15%'>15%</div>
+      <div class='progress-bar' style='width:{{graph_presentation.department_task_graph}}%'>{{graph_presentation.department_task_graph}}</div>
     </div>
   </div>
 
@@ -115,7 +115,7 @@
   </div><!-- col end div-->
   <div class='col'>
     <div class='progress' role='progressbar' aria-label='Basic example' aria-valuenow='0' aria-valuemin='0' aria-valuemax='100'>
-      <div class='progress-bar' style='width: 15%'>15%</div>
+      <div class='progress-bar' style='width: {{graph_presentation.employer_task_graph}}%'>{{graph_presentation.employer_task_graph}}%</div>
     </div>
   </div>
 
